nullaway_error_ED72AEA6-0C5B-43CE-8244-2A25DC122A0D.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/datasource/embedded/EmbeddedDatabaseFactory.java:261: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.dataSource = dataSource;
			                ^
    (see http://t.uber.com/nullaway )
